[package]
name = "drh-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = "0.6"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
geo-types = "0.7"
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
